# saren-gaming-monitor

./: .gitignore  CONTRIBUTING.md  README.md  STRUCTURE.md  index.ts  package.json  pnpm-lock.yaml
public/: index.html
src/: NetworkMonitor.ts  config.ts  config.ts.template  index.ts  internetMonitor.ts  iotMonitor.ts  package.json  server.ts  systemMonitor.ts  types.ts
src/public/: dingdong.js  index.html  index.html.orig  index.html.rej  main-wtako.js  main.css  main.js  mvp.css
src/rust-ping-service/: Cargo.toml
src/rust-ping-service/src/: main.rs
src/scripts/: setup-config.ts
